vlib/v/checker/tests/for_in_mut_string.vv
module main

@[heap]
pub struct Grid {
pub mut:
	header string
}

fn main() {
	h := 'yo'

	mut grid := Grid{
		header: h
	}
	wrap_text(mut grid)
}

fn wrap_text(mut gv Grid) {
	for mut ch in gv.header {
		println(ch)
	}

	for mut letter in 'abc' {
		bit := letter - 1
		println(bit)
	}
}
